[package]
name = "poem-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Opentelemetry
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
# Jaeger connector
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
# HTTP Server
poem = "1.0.0"
# OpenAPI
poem-openapi = "1.0.0"
# Tokio runtime
tokio = { version = "1.12.0", features = ["full"] }
# Tracing
tracing = "0.1.29"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.25"
