[package]
name = "poem-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GraphQL library
async-graphql = { version = "2.10.5", features = ["tracing"] }
# GraphQL poem adapter
async-graphql-poem = "2.10.5"
# Random id
nanoid = "0.4.0"
# Opentelemetry
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
# Jaeger connector
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
# HTTP Server
poem = { version = "1.0.7", default_features = false, features = [] }
# OpenAPI for poem
poem-openapi = { version = "1.0.7", default_features = false, features = [] }
# ORM (based on sqlx)
sea-orm = { version = "0.3.1", features = ["debug-print", "sqlx-postgres", "runtime-tokio-rustls"] }
# Error handling
thiserror = "1.0.30"
# Tokio runtime
tokio = { version = "1.12.0", features = ["full"] }
# Tracing
tracing = "0.1.29"
# Log adapter (sqlx, sea-orm)
tracing-log = "0.1.2"
# Opentelemetry adapter
tracing-opentelemetry = "0.16.0"
# Trace collector
tracing-subscriber = "0.3.0"
